# cbc_steps_counter_bot

./: .gitignore  bot.py  generate_daily_breakdown.py  generate_report.py  generate_report_from_sheet.py  pyproject.toml  requirements.txt  restart.sh  test.csv  Отчеты Шагомарафон - Ответы на форму (1) (копия).csv
tests/: test_bot.py  test_reports.py
tests/data/: basic.csv  multi_day.csv
